# poke

./: .gitignore  CMakeLists.txt  NOTICE  README.md
src/common/generic/: CMakeLists.txt
src/common/generic/include/: fips202.h  tools.h
src/ec/: CMakeLists.txt  basis.c  ec.c
src/ec/include/: curve_extras.h  ec.h
src/ec/ref/: CMakeLists.txt
src/ec/ref/ecx/: basis.c.bak  biextension.c  ec.c  isog_chains.c  kps.c  xeval.c  xisog.c
src/ec/ref/ecx/test/: basis-gen-test.c  biextension-test.c
src/ec/ref/include/: biextension.h  curve_extras.h  ec.h  isog.h
src/ec/ref/inke_lvl1/: basis.c
src/ec/ref/inke_lvl3/: CMakeLists.txt
src/ec/ref/inke_lvl3/test/: biextension-test.c
src/ec/ref/inke_lvl5/test/: CMakeLists.txt  biextension-test.c
src/ec/ref/orig/: CMakeLists.txt
src/ec/ref/orig/test/: CMakeLists.txt
src/ec/ref/pike_ecx/: pike_isog.c
src/ec/ref/pike_lvl1/: CMakeLists.txt
src/ec/ref/poke_ecx/: basis.c  biextension.c  ec.c
src/ec/ref/poke_lvl1/: basis.c  ec.c
src/ec/ref/poke_lvl1/test/: CMakeLists.txt
src/ec/ref/poke_lvl3/: CMakeLists.txt  ec.c
src/ec/ref/poke_lvl3/test/: CMakeLists.txt
src/ec/ref/poke_lvl5/: basis.c  ec.c
src/ec/ref/poke_lvl5/test/: CMakeLists.txt
src/ec/test/: CMakeLists.txt  basis-gen-test.c  biextension-test.c
src/gf/: CMakeLists.txt  fp_p431.c  mp.c
src/gf/ref/: CMakeLists.txt
src/gf/ref/gfx/: fp2.c  mp.c
src/gf/ref/include/: fp2.h  mp.h
src/gf/ref/inke_lvl1/: CMakeLists.txt
src/gf/ref/inke_lvl3/: CMakeLists.txt  fp_p583.c
src/gf/ref/inke_lvl3/test/: CMakeLists.txt
src/gf/ref/inke_lvl5/: CMakeLists.txt  fp_p777.c
src/gf/ref/inke_lvl5/test/: CMakeLists.txt
src/gf/ref/pike_lvl1/: CMakeLists.txt  fp_p387.c
src/gf/ref/pike_lvl3/: CMakeLists.txt  fp_p579.c
src/gf/ref/pike_lvl5/: CMakeLists.txt  fp_p775.c
src/gf/ref/poke_lvl1/: CMakeLists.txt
src/gf/ref/poke_lvl3/: CMakeLists.txt  fp_p648.c
src/gf/ref/poke_lvl5/: CMakeLists.txt  fp_p863.c
src/gf/ref/v1/: fp_p392.c
src/gf/test/: CMakeLists.txt  test_fp.c
src/hd/: CMakeLists.txt
src/hd/ref/: CMakeLists.txt
src/hd/ref/hdx/: theta_isogenies.c
src/hd/ref/hdx/test/: CMakeLists.txt
src/hd/ref/pike_lvl1/: CMakeLists.txt
src/id2iso/: CMakeLists.txt  id2iso.c
src/id2iso/ref/: CMakeLists.txt
src/id2iso/ref/id2isox/: id2iso.c
src/id2iso/ref/id2isox/test/: test_id2iso.c
src/id2iso/ref/include/: id2iso.h
src/id2iso/ref/pike_lvl5/: CMakeLists.txt
src/id2iso/ref/poke_lvl1/: CMakeLists.txt
src/id2iso/ref/poke_lvl1/test/: CMakeLists.txt
src/id2iso/ref/poke_lvl3/test/: CMakeLists.txt
src/id2iso/test/: CMakeLists.txt
src/intbig/generic/: CMakeLists.txt  intbig.c
src/intbig/generic/include/: intbig.h
src/intbig/ref/generic/: CMakeLists.txt  intbig.c
src/intbig/ref/generic/include/: intbig.h
src/intbig/ref/generic/test/: CMakeLists.txt
src/klpt/: CMakeLists.txt
src/klpt/ref/: CMakeLists.txt
src/klpt/ref/include/: klpt.h
src/klpt/ref/inke_lvl1/: CMakeLists.txt
src/klpt/ref/klptx/: tools.c
src/poke/: CMakeLists.txt  poke.c
src/poke/include/: poke.h
src/poke/ref/: CMakeLists.txt
src/poke/ref/include/: inke.h  pike.h  poke.h
src/poke/ref/inke_lvl1/: inke.c  poke.c
src/poke/ref/inke_lvl1/include/: poke.h
src/poke/ref/inke_lvl1/test/: CMakeLists.txt
src/poke/ref/inke_lvl3/: inke.c  poke.c
src/poke/ref/inke_lvl3/test/: CMakeLists.txt
src/poke/ref/inke_lvl5/: CMakeLists.txt  inke.c  poke.c
src/poke/ref/inke_lvl5/include/: inke.h
src/poke/ref/inke_lvl5/test/: CMakeLists.txt
src/poke/ref/inkex/: inke.c
src/poke/ref/inkex/test/: inke-kem-test.c  inke-test.c
src/poke/ref/orig/: CMakeLists.txt  poke.c
src/poke/ref/orig/test/: CMakeLists.txt
src/poke/ref/pike_lvl1/test/: CMakeLists.txt
src/poke/ref/pike_lvl3/: CMakeLists.txt
src/poke/ref/pike_lvl5/test/: CMakeLists.txt
src/poke/ref/pikex/: pike.c
src/poke/ref/pikex/test/: pike-kem-test.c  pike-test.c
src/poke/ref/poke_lvl1/: poke.c
src/poke/ref/poke_lvl1/test/: CMakeLists.txt  poke-test.c
src/poke/ref/poke_lvl3/: CMakeLists.txt  poke.c
src/poke/ref/poke_lvl3/include/: poke.h
src/poke/ref/poke_lvl5/: CMakeLists.txt  poke.c
src/poke/ref/poke_lvl5/test/: CMakeLists.txt  poke-test.c
src/poke/ref/pokex/: poke.c
src/poke/ref/v1/: poke.c
src/poke/test/: CMakeLists.txt  poke-test.c
src/precomp/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  sqisign_parameters.txt  torsion_constants.c
src/precomp/include/: ec_params.h  encoded_sizes.h  endomorphism_action.h  torsion_constants.h
src/precomp/ref/: CMakeLists.txt
src/precomp/ref/inke_lvl1/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/inke_lvl3/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/inke_lvl5/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/orig/: CMakeLists.txt  endomorphism_action.c  poke_parameters.txt  torsion_constants.c
src/precomp/ref/pike_lvl1/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/pike_lvl3/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/pike_lvl5/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/poke_lvl1/: CMakeLists.txt  endomorphism_action.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/poke_lvl3/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/poke_lvl5/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/v1/: CMakeLists.txt  endomorphism_action.c  poke_parameters.txt  torsion_constants.c
src/quaternion/generic/: CMakeLists.txt
(+67 files in other folders)
