add_library(${LIB_POKE_${SVARIANT_UPPER}} poke.c)
target_include_directories(${LIB_POKE_${SVARIANT_UPPER}} PRIVATE ${INC_GF} ${INC_COMMON} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_HD} ${INC_EC} ${INC_INTBIG} ${INC_PUBLIC} ${INC_QUATERNION} ${INC_KLPT} ${INC_ID2ISO} ${INC_POKE})
target_link_libraries(${LIB_POKE_${SVARIANT_UPPER}} PRIVATE ${LIB_EC_${SVARIANT_UPPER}} ${LIB_HD_${SVARIANT_UPPER}} ${LIB_INTBIG} ${LIB_KLPT_${SVARIANT_UPPER}} ${LIB_QUATERNION} ${LIB_ID2ISO_${SVARIANT_UPPER}})
target_compile_options(${LIB_POKE_${SVARIANT_UPPER}} PRIVATE ${C_OPT_FLAGS})

add_subdirectory(test)