# set(SOURCE_FILES_ID2ISO_TESTS
#     ${ID2ISOX_DIR}/test/test_id2iso.c
# )

# add_executable(id2iso_test ${SOURCE_FILES_ID2ISO_TESTS})
# target_link_libraries(id2iso_test ${LIB_ID2ISO_${SVARIANT_UPPER}})
# target_include_directories(id2iso_test PRIVATE ${INC_ID2ISO})

# add_test(id2iso_test id2iso_test)